feat(service): compute and persist architecturalScore throughout pipeline and job service